# 2dmap_generator_from_pointcloud

./: .gitignore  CMakeLists.txt  README.md  install.bash
config/: config.yaml
data/: sample.pcd  sample.ply
output/: map.pgm  map_metadata.yaml
src/: config_loader.cpp  config_loader.h  file_utils.cpp  file_utils.h  main.cpp  map_io.cpp  map_io.h  map_parameters.cpp  map_parameters.h  map_processor.cpp  map_processor.h  pipeline.cpp  pipeline.h  point_cloud_processor.cpp  point_cloud_processor.h
tests/: test_map_processor.cpp
